<resources>
    <string name="app_name">PracticumDev</string>

    <string name="load">Загрузка…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit">edit</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="toolbar_profile">Профиль</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="name1">Виктор Кузнецов</string>
    <string name="name2">Евгений Александров</string>
    <string name="name3">Дмитрий Валерьевич</string>
    <string name="friends">Ваши друзья</string>
    <string name="push">Получать push-уведомления</string>
    <string name="info_work">Хирургия, травмотология</string>
    <string name="info">Сфера деятельности</string>
    <string name="date_of_birth">01 февраля 1980</string>
    <string name="date">Дата рождения</string>
    <string name="name_info">Константинов Денис</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_title">Помочь</string>
    <string name="pick_category">Выберите категорию помощи</string>
    <string name="kids">Дети</string>
    <string name="adult">Взрослые</string>
    <string name="elderly">Пожилые</string>
    <string name="animals">Животные</string>
    <string name="events">Мероприятия</string>
    <string name="search_hint">Введите название организации</string>
    <string name="by_nko">По НКО</string>
    <string name="by_events">По мероприятиям</string>
    <string name="search_result">Ключевые слова: мастер-класс, помощь \nРезультаты поиска: 109 мероприятий</string>
    <string name="image_view">image_view</string>
    <string name="news_title">Новости</string>
    <string name="filter">Filter</string>
    <string name="test_news_title">Спонсоры отремонтируют школу-интернат</string>
    <string name="test_news_desc">Дубовская школа-интернат для детей с ограниченными возможностями здоровья стала первой в области …</string>
    <string name="text_btn_news_test">Осталось 13 дней (21.09 – 20.10)</string>
    <string name="filter_toolbar">Фильтр</string>
    <string name="apply">Apply</string>
    <string name="tv_info">Категории помощи</string>
    <string name="question">У вас есть вопросы?</string>
    <string name="write_us"><u>Напишите нам</u></string>
    <string name="test_decription">Участники и болельщики смогли весело и активно провести время на «Петербургском благотворительном марафоне» и при этом финансово поучаствовать в помощи детям.\n\nПри этом финансово поучаствовать в помощи детям. При этом финансово поучаствовать в помощи детям.</string>
    <string name="org_website"><u>Перейти на сайт организаии</u></string>
    <string name="title_org_test">Благотворительный Фонд «Счастливый Мир»</string>
    <string name="help_clothes">Помочь вещами</string>
    <string name="become_volunteer">Стать волонтером</string>
    <string name="help_prof">Проф. помощь</string>
    <string name="help_money">Помочь деньгами</string>
    <string name="share">Share</string>
    <string name="auth">Авторизация</string>
    <string name="auth_desc">Для участия в мероприятиях войдите \nв приложение через социальые сети</string>
    <string name="auth_with_app">Или авторизуйтесь через приложение</string>
    <string name="email">E-mail</string>
    <string name="auth_email">Введите e-mail</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_pass"><u>Забыли пароль?</u></string>
    <string name="registartion"><u>Регистрация</u></string>
    <string name="event_msg">Напишите в строке поиска название \nмероприятия или ключевые слова.</string>
    <string name="example">Например,</string>
    <string name="test_example"><u>мастер-класс</u>, <u>помощь</u></string>
</resources>