<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AuthFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:title="@string/auth"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:navigationIcon="@drawable/ic_back_arrow"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_auth_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        style="@style/RegularText"
        android:text="@string/auth_desc"
        android:textAlignment="center"
        />

    <ImageView
        android:id="@+id/logo_vk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_auth_desc"
        app:layout_constraintEnd_toStartOf="@+id/logo_fb"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_logo_vk"
        />

    <ImageView
        android:id="@+id/logo_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_auth_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logo_fb"
        />

    <ImageView
        android:id="@+id/logo_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_auth_desc"
        app:layout_constraintStart_toEndOf="@+id/logo_fb"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/ic_logo_ok"
        />

    <TextView
        android:id="@+id/tv_auth_with_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_fb"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:text="@string/auth_with_app"
        style="@style/RegularText"
        />
    
    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_auth_with_app"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/HintText"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="10dp"
            android:hint="@string/auth_email"
            style="@style/AuthEditText"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/tv_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/password"
            style="@style/HintText"
            />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_password_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="10dp"
            android:hint="@string/enter_password"
            style="@style/AuthEditText"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_pass"
            app:layout_constraintBottom_toBottomOf="@id/et_pass"
            android:src="@drawable/ic_close_eye"
            />

        <ImageView
            android:id="@+id/iv_open"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintEnd_toStartOf="@id/iv_close"
            app:layout_constraintTop_toTopOf="@id/et_pass"
            app:layout_constraintBottom_toBottomOf="@id/et_pass"
            android:src="@drawable/ic_open_eye"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        android:layout_marginTop="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_bg"
        android:enabled="false"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        style="@style/SignInButton"
        />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/leaf"
        style="@style/Link"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        android:layout_marginTop="20dp"
        android:text="@string/registartion"
        android:textColor="@color/leaf"
        style="@style/Link"
        android:textSize="14sp"
        />





</androidx.constraintlayout.widget.ConstraintLayout>