<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/click_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/profile_option_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_upload_photo"
            app:tint="@color/leaf"
            android:contentDescription="@string/image_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:fontFamily="@font/roboto"
            android:text="@string/select_photo"
            android:textColor="@color/text_black"
            android:textSize="22sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/click_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/profile_option_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo"
            app:tint="@color/leaf"
            android:contentDescription="@string/image_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:fontFamily="@font/roboto"
            android:text="@string/take_photo"
            android:textColor="@color/text_black"
            android:textSize="22sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/click_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/profile_option_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_delete"
            app:tint="@color/leaf"
            android:contentDescription="@string/image_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:fontFamily="@font/roboto"
            android:text="@string/delete"
            android:textColor="@color/text_black"
            android:textSize="22sp"
            />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>